css/styles.css
/* Pallette adapted from Color Hunt https://colorhunt.co/palette/a79277d1bb9eead8c0fff2e1 
#A79277
#D1BB9E
#EAD8C0
#FFF2E1
*/

* {
    background-color: #FFE9CC;
    color: #102C57;
    font-family: "Urbanist", sans-serif;
}

#title {
    background-color: #102C57;
    color: #FFE9CC;
    text-shadow: -5px 5px 5px #102C57,
        5px 5px 5px #102C57,
        5px -5px 5px #102C57,
        -5px -5px 5px #102C57;
    text-align: center;
    font-size: 2em;
    padding: 20px 0 12px 0;
    margin: 0;
    background: repeating-linear-gradient(#940404,
            #940404 9.5%,
            #FFE9CC 9.5%,
            #FFE9CC 18.1%);
}

h1,
h2 {
    margin: 3px;
}

button {
    font-family: "Lilita One", sans-serif;
    cursor: pointer;
}

#new-game-button,
#end-button,
#game-info-button {
    position: absolute;
    top: 10px;
    background-color: #102C57;
    color: #FFE9CC;
    font-size: 13px;
    border-radius: 3px;
}

#new-game-button,
#end-button {
    left: 10px;
}

#end-button {
    background-color: #940404;
    visibility: hidden;
}

#game-info-button {
    right: 10px;
}

#game-info-on-load {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: fit-content;
    margin: 5px;
}

#rules {
    font-size: 18px;
    padding: 0;
    margin: 0 0 5px 0;
}

#new-game-button-on-load {
    background-color: #940404;
    color: #102C57;
    text-shadow: -2px 2px 2px #FFE9CC,
        2px 2px 2px #FFE9CC,
        2px -2px 2px #FFE9CC,
        -2px -2px 2px #FFE9CC;
    font-size: 20px;
    padding: 3px 15px 3px 15px;
    border-radius: 3px;
}

#gameplay-area-top {
    display: none;
    width: 98%;
    height: fit-content;
}

.popup {
    position: absolute;
    top: 10px;
    left: 10px;
    height: 58px;
    color: #FFE9CC;
    border: 5px double #FFE9CC;
    border-radius: 5px;
    z-index: 2;
    visibility: hidden;
}

#popup-new {
    background-color: #102C57;
    width: 300px;
}

#popup-quit {
    background-color: #940404;
    width: 275px;
}

.popup-close {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 15px;
    height: 15px;
    font-weight: 700;
    margin: 5px;
    float: right;
    border-radius: 3px;
    cursor: pointer;
}

#popup-close-new {
    background-color: #FFE9CC;
    color: #102C57;
}

#popup-close-quit {
    background-color: #FFE9CC;
    color: #940404;
}

.popup-contents {
    display: flex;
    gap: 3%;
    height: 100%;
    align-items: center;
    margin: 0 0 0 10px;
}

#popup-contents-new {
    background-color: #102C57;
    color: #FFE9CC;
}

#popup-contents-quit {
    background-color: #940404;
    color: #FFE9CC;
}

.game-selector-button {
    width: 60px;
    border-radius: 3px;
}

.quit-button {
    color: #940404;
    border-radius: 3px;
}

#gameplay-area-top-2 {
    width: 85%;
}

.question-area {
    display: flex;
    flex-direction: column;
}

#question-asker,
#answer-notification {
    width: 100%;
    height: 65px;
    font-size: 17px;
    padding: 5px;
    margin: 5px;
    z-index: 1;
}

#answer-notification {
    display: none;
    cursor: pointer;
}

#next-question-plus-name-area {
    display: flex;
}

.mistake-area {
    display: flex;
    flex-direction: column;
    gap: 2px;
    padding: 5px;
}

.mistake-imagery {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 15px;
    height: 15px;
    text-align: center;
    font-size: 1em;
    color: #940404;
    border: 3px solid #940404;
    border-radius: 25%;
    visibility: hidden;
}

#gameplay-area-middle {
    display: none;
    justify-content: center;
    height: fit-content;
}

#question-asker-button {
    position: absolute;
    display: none;
    background-color: #102C57;
    color: #FFE9CC;
    font-size: 1em;
    padding: 5px;
    border-radius: 5px;
    z-index: 1;
    cursor: pointer;
}

#pres-name-box {
    display: flex;
    justify-content: center;
    /* This color means it is effectively hidden from view at small media queries */
    color: #FFE9CC;
    width: 100%;
    height: 1em;
    font-family: "Lilita One", sans-serif;
    font-size: 2em;
    margin-bottom: 5px;
}

.president-area {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #102C57;
    width: 100%;
    height: 75%;
    border-radius: 5px;
    position: fixed;
    overflow-y: auto;
    overflow-x: hidden;
}

::-webkit-scrollbar {
    width: 15px;
}

::-webkit-scrollbar-track {
    background: #102C57;
}

::-webkit-scrollbar-thumb {
    background: #FFE9CC;
    border-radius: 15px;
}

#pres-button-area {
    display: grid;
    grid-template-columns: repeat(5, 70px);
    grid-column-gap: 5px;
    grid-row-gap: 5px;
    align-items: center;
    background-color: #102C57;
    color: #FFE9CC;
    width: fit-content;
    padding: 20px;
    border-radius: 0 10px 10px 0;
}

.pres-button {
    display: flex;
    flex-direction: column;
    width: fit-content;
    height: fit-content;
    border: 3px solid #FFE9CC;
    border-radius: 10%;
    box-shadow: 2px 2px #94918e;
    cursor: pointer;
}

.pres-button:active {
    text-shadow: .4px .4px .75px #940404;
    transform: translate(1px);
}

#mode-info {
    display: none;
}

.portrait {
    width: 65px;
    height: 65px;
    border-radius: 5%;
    filter: sepia(100%);
    user-select: none;
    -webkit-user-select: none;
}

.portrait:hover {
    filter: sepia(100%) opacity(75%) brightness(.75);
}

.pres-name-text {
    text-align: center;
    font-size: 11px;
    padding: 0;
    margin: 0;
}

#mode-info>h1 {
    text-align: center;
    font-size: 1.35em;
}

#mode-info>p {
    font-size: .85em;
}

li {
    font-size: .8em;
}

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: .8em;
    margin: 5px 0 0 0;
}

footer>p {
    margin: 0;
}

/*slightly larger phone query*/
@media only screen and (min-width: 467px) {

    #title {
        padding: 12px 0 12px 0;
    }

    #question-asker,
    #answer-notification {
        font-size: 18px;
    }
}


/*medium phone query*/
@media only screen and (min-width: 500px) {

    #title {
        padding: 12px 0 12px 0;
    }

    #question-asker,
    #answer-notification {
        height: 67px;
        font-size: 20px;
    }

    #pres-button-area {
        grid-template-columns: repeat(5, 80px);
        padding: 1em;
    }

    .portrait {
        width: 75px;
        height: 75px;
    }

    .pres-name-text {
        font-size: 12px;
        font-weight: 700;
    }
}

/*larger phone query*/
@media only screen and (min-width: 600px) {

    #question-asker,
    #answer-notification {
        height: 70px;
        font-size: 22px;
    }
}

/*tablet query*/
@media only screen and (min-width: 768px) {

    #title {
        font-size: 2.5em;
    }

    #new-game-button,
    #end-button,
    #game-info-button,
    #new-game-button-on-load {
        font-size: 22px;
    }

    .mistake-imagery {
        width: 22px;
        height: 22px;
        font-size: 1.5em;
        font-weight: 700;
        border: 4px solid #940404;
        border-radius: 25%;
    }

    #question-asker,
    #answer-notification {
        height: 75px;
        font-size: 25px;
    }

    #pres-name-box {
        /* This color means that the text can be viewed with larger media queries */
        color: #102C57;
    }

    .president-area {
        position: relative;
        height: fit-content;
        overflow-x: auto;
    }

    #pres-button-area {
        grid-template-columns: repeat(9, 75px);
        grid-column-gap: 5px;
        grid-row-gap: 5px;
        padding: 5px;
        border-radius: 0 10px 10px 0;
    }

    .portrait {
        width: 70px;
        height: 70px;
    }

    .pres-name-text {
        display: none;
        width: 0;
        height: 0;
    }

    #mode-info>h1 {
        font-size: 1.45em;
    }

    #mode-info>p {
        font-size: .95em;
    }

    li {
        font-size: .9em;
    }

    footer {
        flex-direction: row;
        font-size: .9em;
    }

}

/*desktop query*/
@media only screen and (min-width: 992px) {

    #title {
        font-size: 3em;
    }

    #new-game-button,
    #end-button,
    #game-info-button,
    #new-game-button-on-load {
        font-size: 25px;
    }

    #question-asker,
    #answer-notification {
        width: 95%;
        height: 65px;
        font-size: 30px;
    }

    .president-area {
        display: flex;
        flex-direction: row;
        align-items: normal;
        background-color: #940404;
    }

    #pres-flag-area {
        width: 100%;
        height: auto;
        background: repeating-linear-gradient(#940404,
                #940404 9.5%,
                #FFE9CC 9.5%,
                #FFE9CC 18.1%);
    }

    #pres-button-area {
        grid-template-columns: repeat(9, 80px);
        grid-column-gap: 5px;
        grid-row-gap: 5px;
        padding: 5px;
        border-radius: 0 10px 10px 0;
    }

    .portrait {
        width: 70px;
        height: 70px;
    }

    #mode-info>h1 {
        font-size: 1.55em;
    }

    #mode-info>p {
        font-size: 1.05em;
    }

    li {
        font-size: 1em;
    }

    footer {
        font-size: 1em;
    }

}

/*large desktop query*/
@media only screen and (min-width: 1260px) {

    #pres-button-area {
        grid-template-columns: repeat(9, 5.5em);
        grid-column-gap: 5px;
        grid-row-gap: 5px;
        padding: 1em;
        border-radius: 0 10px 10px 0;
    }

    .portrait {
        width: 5em;
        height: 5em;
        border-radius: 5%;
        filter: sepia(100%);
        user-select: none;
        -webkit-user-select: none;
    }
}

